force-app/main/default/objects/loan__Automated_Payment_Configuration__c/fields/Description_of_funds__c.field-meta.xml
<CustomField>
    <fullName>Description_of_funds__c</fullName>
    <label>Description of funds</label>
    <length>12</length>
    <type>Text</type>
</CustomField>