force-app/main/default/objects/loan__Automated_Payment_Configuration__c/fields/Name_of_User__c.field-meta.xml
<CustomField>
    <fullName>Name_of_User__c</fullName>
    <label>Name of User</label>
    <length>26</length>
    <required>true</required>
    <type>Text</type>
</CustomField>