force-app/main/default/objects/loan__Automated_Payment_Configuration__c/fields/Remitter_Name__c.field-meta.xml
<CustomField>
    <fullName>Remitter_Name__c</fullName>
    <label>Remitter Name</label>
    <length>16</length>
    <type>Text</type>
</CustomField>