force-app/main/default/objects/loan__Automated_Payment_Configuration__c/fields/User_Financial_Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Financial_Institution_Name__c</fullName>
    <label>User Financial Institution Name</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>