force-app/main/default/objects/loan__Automated_Payment_Configuration__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <label>User Id</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>